# JGS

./: .gitignore  README.md
haijun/server-package/: pyproject.toml  requirements-gpu.txt
haijun/server-package/configs/: gpu_sync_manifest.yaml  haijun.yaml
haijun/server-package/datasets/: haijun_sft.jsonl
haijun/server-package/docs/: ARCHITECTURE.md  AUTONOMY_MODEL.md  CAPABILITY_MATRIX.md  CODEX_PARTNERSHIP.md  CONTROL_ONLY_POLICY.md  CONVERHAI_DOCTRINE.md  DATASET_SCHEMA.md  DOWNLOAD_REFERENCE_INVENTORY_20260604.md  EXTERNAL_REPO_INVENTORY_20260604.md  GNU_TO_JGS_MIGRATION_PATTERNS.md  GPU_RUNBOOK.md  GPU_SERVER_PACKAGE.md  HAICODE_PURITY.md  HAIJUN_AGENT_CHARTER.md  HAIJUN_RUNTIME_TARGETS.md  HUGGINGFACE_SERVER_MODEL_REGISTRY.md  JDB_DEBUGGER_VISION.md  JGS_DNS_PLAN.md  JGS_REPOSITORY_PLAN.md  JGS_WORLDVIEW.md  JUROX_OS_VISION.md  LOCAL_GPU_SERVER_MOCK_RESULT_20260604.md  LOCAL_GPU_SERVER_MOCK_TEST.md  MEMORY_MODEL.md  MODEL_SELECTION_STRATEGY.md  MODEL_STACK_DECISION.md  MSYS2_MINGW64_RUNBOOK.md  PORTABLE_AI_REVIEW.md  RUNPOD_DEPLOY_PREP.md  SECURITY_MODEL.md  SERVER_FIRST_INSTALL_CHECKLIST.md  SERVER_PACKAGE_README.md  SERVER_RENTAL_READY_CHECKLIST.md  SERVER_SYSTEM_INSPECTION.md  SSH_DNS_RUNBOOK.md  TRAINING_LIFECYCLE.md
haijun/server-package/memory/: jgs_legacy_terms_seed.txt  jgs_worldview.example.yaml  owner_profile.example.yaml
haijun/server-package/references/: JGS_REFERENCE_INDEX.md  README.md  reference_index.yaml
haijun/server-package/scripts/: Build-ServerPackage.ps1  Evaluate-Answers.ps1  Inspect-GpuServer.ps1  Pack-ServerPackage.ps1  (+23 more)
(+34 files in other folders)
