[project]
name = "haijun-ai"
version = "0.1.0"
description = "Control, dataset, training, and evaluation workspace for Haijun AI."
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.0",
  "datasets>=3.0",
  "peft>=0.13",
  "pyyaml>=6.0",
  "torch>=2.4",
  "transformers>=4.46",
  "trl>=0.12",
]

[project.optional-dependencies]
gpu = [
  "bitsandbytes>=0.44",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

